--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "bifunctor",
+  "name": "categories",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Typewise implementations of categories from category theory implemented in TypeScript",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src/ -d dist/"
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jreina/bifunctor.git"
   },
   "author": "Johnny Reina <johnny.r.reina@gmail.com>",
-  "license": "WTFPL",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/jreina/bifunctor/issues"
   },
